--- a/HappyCows/HappyCows.csproj
+++ b/HappyCows/HappyCows.csproj
@@ -127,6 +127,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BaseEntity.cs" />
+    <Compile Include="Models\Calf.cs" />
+    <Compile Include="Models\Events.cs" />
     <Compile Include="Models\Cow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
