controllers and views added, models updated, migration added

--- a/HappyCows/HappyCows.csproj
+++ b/HappyCows/HappyCows.csproj
@@ -44,6 +44,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -120,16 +128,37 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CalvesController.cs" />
+    <Compile Include="Controllers\CowsController.cs" />
+    <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Enums\EventEnum.cs" />
     <Compile Include="Enums\CowStateEnum.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704081302233_InitialCreate.cs" />
+    <Compile Include="Migrations\201704081302233_InitialCreate.Designer.cs">
+      <DependentUpon>201704081302233_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704081315495_first migration.cs" />
+    <Compile Include="Migrations\201704081315495_first migration.Designer.cs">
+      <DependentUpon>201704081315495_first migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704081332314_events_updated.cs" />
+    <Compile Include="Migrations\201704081332314_events_updated.Designer.cs">
+      <DependentUpon>201704081332314_events_updated.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704081400021_baseentity_updated.cs" />
+    <Compile Include="Migrations\201704081400021_baseentity_updated.Designer.cs">
+      <DependentUpon>201704081400021_baseentity_updated.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Calf.cs" />
     <Compile Include="Models\Events.cs" />
     <Compile Include="Models\Cow.cs" />
+    <Compile Include="Models\HappyCowsContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +197,21 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Cows\Create.cshtml" />
+    <Content Include="Views\Cows\Delete.cshtml" />
+    <Content Include="Views\Cows\Details.cshtml" />
+    <Content Include="Views\Cows\Edit.cshtml" />
+    <Content Include="Views\Cows\Index.cshtml" />
+    <Content Include="Views\Calves\Create.cshtml" />
+    <Content Include="Views\Calves\Delete.cshtml" />
+    <Content Include="Views\Calves\Details.cshtml" />
+    <Content Include="Views\Calves\Edit.cshtml" />
+    <Content Include="Views\Calves\Index.cshtml" />
+    <Content Include="Views\Events\Create.cshtml" />
+    <Content Include="Views\Events\Delete.cshtml" />
+    <Content Include="Views\Events\Details.cshtml" />
+    <Content Include="Views\Events\Edit.cshtml" />
+    <Content Include="Views\Events\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -179,6 +223,20 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704081302233_InitialCreate.resx">
+      <DependentUpon>201704081302233_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704081315495_first migration.resx">
+      <DependentUpon>201704081315495_first migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704081332314_events_updated.resx">
+      <DependentUpon>201704081332314_events_updated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704081400021_baseentity_updated.resx">
+      <DependentUpon>201704081400021_baseentity_updated.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
