--- a/HappyCows/HappyCows.csproj
+++ b/HappyCows/HappyCows.csproj
@@ -156,6 +156,10 @@
     <Compile Include="Migrations\201704082118417_calf_mother_changed.Designer.cs">
       <DependentUpon>201704082118417_calf_mother_changed.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704082241529_data_anotations_added.cs" />
+    <Compile Include="Migrations\201704082241529_data_anotations_added.Designer.cs">
+      <DependentUpon>201704082241529_data_anotations_added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Calf.cs" />
@@ -219,6 +223,7 @@
     <Content Include="Views\Events\Details.cshtml" />
     <Content Include="Views\Events\Edit.cshtml" />
     <Content Include="Views\Events\Index.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\Enum.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -247,6 +252,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704082118417_calf_mother_changed.resx">
       <DependentUpon>201704082118417_calf_mother_changed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704082241529_data_anotations_added.resx">
+      <DependentUpon>201704082241529_data_anotations_added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
