.zip file included in project

--- a/HappyCows/HappyCows.csproj
+++ b/HappyCows/HappyCows.csproj
@@ -191,6 +191,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="HappyCowsContext-20170408150128.zip" />
     <None Include="Properties\PublishProfiles\HappyCows - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-1.12.4-vsdoc.js" />
